--- a/resources/public/manifest.json
+++ b/resources/public/manifest.json
@@ -4,7 +4,7 @@
     "start_url": "/?from=pwa",
     "display": "standalone",
     "orientation": "any",
-    "background_color": "#fff",
+    "background_color": "#000",
     "theme_color": "#3e8ed0",
     "screenshots": [
         {
